[package]
name = "gpkg"
version = "0.3.0"
edition = "2024"
homepage = "https://github.com/cjriley9/gpkg-rs"
repository = "https://github.com/cjriley9/gpkg-rs"
license = "MIT OR Apache-2.0"
description = "Rust library for working with GeoPackages"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusqlite = { version = "0.37.0", features = ["bundled"] }
geo-types = "0.7.4"
gpkg-derive = { version = "0.3.0", path = "../gpkg-derive" }
wkb = "0.9.1"
thiserror = "2.0.17"
byteorder = "1.4.3"

[dev-dependencies]
tempfile = "3.3.0"
